[tool.poetry]
name = "vqe-h2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vqe_h2"}]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
